--- a/ProyectoCoderApp/templates/ProyectoCoderApp/posteo_detail.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/posteo_detail.html
@@ -17,7 +17,7 @@ Editar Perfil - App Coder
     </header>
     <!-- Preview image figure-->
     {% if post.imagen.url != 0 %}
-    <a><img class="img-fluid" src="{{posteo.imagen.url}}" alt="..." /></a>
+    <a><img width="500px" class="img-fluid" src="{{posteo.imagen.url}}" alt="..." /></a>
     {% endif %}
     <!-- Post content-->
     <section class="mb-5">
